--- a/TP2/[TP2]_Text_mining_and_chatbots.ipynb
+++ b/TP2/[TP2]_Text_mining_and_chatbots.ipynb
@@ -6,11 +6,23 @@
         "id": "OK9DUA1qI6A8"
       },
       "source": [
-        "# TP2 - Text-mining and chatbots [BRAT]\n",
+        "# TP2 - Text-mining and chatbots\n",
+        "# Analysis of the QUAERO French Med Corpus\n",
         "**Students**:\n",
         "- Thanh Gia Hieu KHUONG\n",
         "- Ragi BHATT\n",
         "- Benedictus Kent RACHMAT"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## QUAERO French Med corpus\n",
+        "\n",
+        "The corpus is a resource for French medical language processing, comprising two versions (**BRAT**/**CoNLL**) and two subsets (**EMEA**/**MEDLINE**), each split into training, development, and test sets.\n",
+        "\n",
+        "Let's start with defining the data path:"
       ]
     },
     {
@@ -34,11 +46,45 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "O0RN5dC7KCkz"
-      },
+      "metadata": {},
       "source": [
-        "## Read BRAT data"
+        "## Objective\n",
+        "\n",
+        "For each version, subset, and split of the corpus, analyze:\n",
+        "\n",
+        "**1.** Number of tokens\n",
+        "\n",
+        "**2.** Total number of entities\n",
+        "\n",
+        "**3.** Number of unique entities\n",
+        "\n",
+        "**4.** Number of entity types\n",
+        "\n",
+        "**5.** Number of entities per type"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Parse BRAT Annotations\n",
+        "\n",
+        "The function `parse_brat_annotation` is implemented to process these files. It reads each line of the annotation data, extracts entities, and categorizes them by their types. \n",
+        "\n",
+        "#### Steps:\n",
+        "1. **File Reading**: Each `.ann` (annotation) and corresponding `.txt` (text) file in the subsets are read.\n",
+        "2. **Token Counting**: Tokens in the text files are counted using regular expressions.\n",
+        "3. **Entity Analysis**: The parsed annotation data provides counts for the total number of entities, the number of unique entities, and the number of entities per type.\n",
+        "\n",
+        "The `analyze_corpus` function iterates over each subset (EMEA and MEDLINE) and split (train, dev, test) in the corpus. For each subset and split, it processes the corresponding annotation and text files to gather the required statistics.\n",
+        "\n",
+        "### Libraries Used\n",
+        "\n",
+        "We didn't use any library specifically for this. We analyze them with normal Python libraries:\n",
+        "\n",
+        "- `os`: For file path manipulations and directory traversals.\n",
+        "- `re`: Regular expressions for tokenization.\n",
+        "- `collections.Counter`: Efficient counting of entities per type."
       ]
     },
     {
@@ -141,8 +187,6 @@
         }
       ],
       "source": [
-        "\n",
-        "\n",
         "def parse_brat_annotation(ann_data):\n",
         "    entities = {}\n",
         "    entity_types = set()\n",
@@ -225,13 +269,33 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Read CoNLL data"
+        "We will plot the difference between 2 subset at the end of the notebook."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "## Parse CoNLL Annotations\n",
+        "\n",
+        "The function `get_statistics` is implemented to process these files. It reads each line of the annotation data, extracts entities, and categorizes them by their types. \n",
+        "\n",
+        "#### Steps:\n",
+        "\n",
+        "**1.** File Reading: Each file within the subsets and splits is read using the pandas library.\n",
+        "   \n",
+        "**2.** Data Processing: The files are processed to count tokens, identify and categorize entities, and aggregate them by their types.\n",
+        "   \n",
+        "**3.** Entity Handling: **Multi-token entities** (e.g., 'CHEM-B', 'CHEM-I') **are merged into single entities** for accurate counting.\n",
+        "\n",
+        "### Libraries Used\n",
+        "\n",
+        "We didn't use any library specifically for this. We analyze them with normal Python libraries:\n",
+        "\n",
+        "- `os`: For file path manipulations and directory traversals.\n",
+        "- `re`: Regular expressions for tokenization.\n",
+        "- `collections.defaultdict`: Efficient counting of entities per type."
+      ]
     },
     {
       "cell_type": "code",
@@ -523,11 +587,11 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "source": [
+        "### Final Discussion is in our report"
+      ]
     }
   ],
   "metadata": {
