--- a/TP5/2-DialogueGeneration.ipynb
+++ b/TP5/2-DialogueGeneration.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -22,85 +22,14 @@
     "id": "iVXycoM-vzC0",
     "outputId": "bde35f8e-ad8f-439d-eaaa-1d15b25b3f5c"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: datasets in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (2.16.1)\n",
-      "Requirement already satisfied: pandas in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (2.2.0)\n",
-      "Requirement already satisfied: matplotlib in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (3.8.2)\n",
-      "Requirement already satisfied: scikit-learn in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (1.4.0)\n",
-      "Requirement already satisfied: transformers in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (4.37.2)\n",
-      "Requirement already satisfied: rouge in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (1.0.1)\n",
-      "Collecting evaluate\n",
-      "  Downloading evaluate-0.4.1-py3-none-any.whl.metadata (9.4 kB)\n",
-      "Requirement already satisfied: filelock in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from datasets) (3.13.1)\n",
-      "Requirement already satisfied: numpy>=1.17 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from datasets) (1.26.4)\n",
-      "Requirement already satisfied: pyarrow>=8.0.0 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from datasets) (15.0.0)\n",
-      "Requirement already satisfied: pyarrow-hotfix in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from datasets) (0.6)\n",
-      "Requirement already satisfied: dill<0.3.8,>=0.3.0 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from datasets) (0.3.7)\n",
-      "Requirement already satisfied: requests>=2.19.0 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from datasets) (2.31.0)\n",
-      "Requirement already satisfied: tqdm>=4.62.1 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from datasets) (4.66.1)\n",
-      "Requirement already satisfied: xxhash in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from datasets) (3.4.1)\n",
-      "Requirement already satisfied: multiprocess in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from datasets) (0.70.15)\n",
-      "Requirement already satisfied: fsspec<=2023.10.0,>=2023.1.0 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from fsspec[http]<=2023.10.0,>=2023.1.0->datasets) (2023.10.0)\n",
-      "Requirement already satisfied: aiohttp in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from datasets) (3.9.3)\n",
-      "Requirement already satisfied: huggingface-hub>=0.19.4 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from datasets) (0.20.3)\n",
-      "Requirement already satisfied: packaging in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from datasets) (23.1)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from datasets) (6.0.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from pandas) (2023.3.post1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from pandas) (2023.4)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from matplotlib) (1.2.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from matplotlib) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from matplotlib) (4.48.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from matplotlib) (1.4.5)\n",
-      "Requirement already satisfied: pillow>=8 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from matplotlib) (10.2.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from matplotlib) (3.1.1)\n",
-      "Requirement already satisfied: scipy>=1.6.0 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from scikit-learn) (1.12.0)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from scikit-learn) (1.3.2)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from scikit-learn) (3.2.0)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from transformers) (2023.12.25)\n",
-      "Requirement already satisfied: tokenizers<0.19,>=0.14 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from transformers) (0.15.1)\n",
-      "Requirement already satisfied: safetensors>=0.4.1 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from transformers) (0.4.2)\n",
-      "Requirement already satisfied: six in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from rouge) (1.16.0)\n",
-      "Collecting responses<0.19 (from evaluate)\n",
-      "  Downloading responses-0.18.0-py3-none-any.whl (38 kB)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from aiohttp->datasets) (1.3.1)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from aiohttp->datasets) (23.1.0)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from aiohttp->datasets) (1.4.1)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from aiohttp->datasets) (6.0.5)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.0 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from aiohttp->datasets) (1.9.4)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from huggingface-hub>=0.19.4->datasets) (4.9.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from requests>=2.19.0->datasets) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from requests>=2.19.0->datasets) (3.4)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from requests>=2.19.0->datasets) (2.1.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/gerald/miniconda3/envs/chatbot/lib/python3.11/site-packages (from requests>=2.19.0->datasets) (2024.2.2)\n",
-      "Downloading evaluate-0.4.1-py3-none-any.whl (84 kB)\n",
-      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m84.1/84.1 kB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: responses, evaluate\n",
-      "Successfully installed evaluate-0.4.1 responses-0.18.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "! pip install datasets pandas matplotlib scikit-learn transformers rouge evaluate tqdm"
+    "!pip install -q datasets pandas matplotlib scikit-learn transformers rouge evaluate tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {
     "id": "4gMctwE0v12A"
    },
@@ -127,6 +56,7 @@
     "# Generation for task oriented chatbot\n",
     "\n",
     "<img src=\"media/dialogue_patient.png\" style=\"width: 400px;\"/></div>\n",
+    "\n",
     "The objective of this small project is to devellop a small chatbot using information of the corpus"
    ]
   },
@@ -143,9 +73,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.06034207344055176,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "config.json",
+       "rate": null,
+       "total": 1021,
+       "unit": "B",
+       "unit_divisor": 1000,
+       "unit_scale": true
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ee7012020b8e4a57a67e0db508bb1738",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/1.02k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.030820131301879883,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "model.safetensors",
+       "rate": null,
+       "total": 327657928,
+       "unit": "B",
+       "unit_divisor": 1000,
+       "unit_scale": true
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3c9bb6d8e20a436281c893e0c45b590f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/328M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "model = AutoModelForCausalLM.from_pretrained(\"ThomasGerald/wozchitchat\")\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"ThomasGerald/wozchitchat\")"
@@ -160,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -183,9 +176,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the model as been ``Adapted'' using the following format :\n",
+    "Notice that the model as been `Adapted` using the following format :\n",
     "\n",
-    "**[USER]{user_input}[BOT]{answer_of_the_system}**\n",
+    "**[USER] {user_input} [BOT] {answer_of_the_system}**\n",
     "\n",
     "The model was trained to generate **{answer_of_the_system}**"
    ]
@@ -1041,7 +1034,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
